--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 [[bin]]
 name = "sct"
 
+[[bin]]
+name = "sct_expand"
+
 [dependencies]
 bytemuck = "1.16.0"
 candle-core = { version = "0.5.1" }
@@ -16,9 +19,12 @@ equator = "0.2.2"
 eyre = "0.6.12"
 faer = "0.19.0"
 half = "2.4.1"
+itertools = "0.13.0"
 linya = "0.3.0"
 memmap2 = "0.9.4"
+num_cpus = "1.16.0"
 rand = "0.8.5"
 rayon = "1.10.0"
 reborrow = "0.5.5"
 safetensors = "0.4.3"
+tempdir = "0.3.7"
