--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,9 @@ name = "signtensors"
 version = "0.1.0"
 edition = "2021"
 
+[features]
+candle = ["candle-core"]
+
 [[bin]]
 name = "sct"
 
@@ -11,7 +14,7 @@ name = "sct_expand"
 
 [dependencies]
 bytemuck = "1.16.0"
-candle-core = { version = "0.5.1" }
+candle-core = { version = "0.5.1", optional = true }
 chrono = "0.4.38"
 clap = { version = "4.5.7", features = ["derive"] }
 cuts-v2 = { version = "0.1.0", path = "../cuts" }
