--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,7 @@ bytemuck = "1.16.0"
 candle-core = { version = "0.5.1", optional = true }
 chrono = "0.4.38"
 clap = { version = "4.5.7", features = ["derive"] }
-cuts-v2 = { version = "0.1.0", path = "../cuts" }
+cuts = { version = "0.1.0", path = "../cuts" }
 equator = "0.2.2"
 eyre = "0.6.12"
 faer = "0.19.0"
